[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game/Menus/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Game/Menus/Mods/ModMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Menus/Login/ServerLogin.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Menus/Settings/SettingsScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Menus/SessionInfo/SessionInfo.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/Menus/ServerInfo/ServerInfo.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game/Menus/MenuFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Game/Menus/Theme/BaseTheme.tres" type="Theme" id=8]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="Margin"]
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftHalf" type="VBoxContainer" parent="Margin/Menu"]
margin_right = 624.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SessionInfo" parent="Margin/Menu/LeftHalf" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 624.0
margin_bottom = 333.0

[node name="ServerInfo" parent="Margin/Menu/LeftHalf" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 353.0
margin_right = 624.0
margin_bottom = 686.0

[node name="SettingsScreen" parent="Margin/Menu/LeftHalf" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 706.0
margin_right = 624.0
margin_bottom = 1040.0

[node name="CenterHalf" type="VBoxContainer" parent="Margin/Menu"]
margin_left = 628.0
margin_right = 1252.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightHalf" type="VBoxContainer" parent="Margin/Menu"]
margin_left = 1256.0
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerLogin" parent="Margin/Menu/RightHalf" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 624.0
margin_bottom = 400.0

[node name="ModMenu" parent="Margin/Menu/RightHalf" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 420.0
margin_right = 624.0
margin_bottom = 820.0

[node name="ExitButton" type="Button" parent="Margin/Menu/RightHalf"]
margin_top = 840.0
margin_right = 624.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_fonts/font = ExtResource( 7 )
text = "Exit"

[node name="ConfirmExit" type="ConfirmationDialog" parent="."]
margin_left = 381.838
margin_top = 240.416
margin_right = 581.838
margin_bottom = 310.416
theme = ExtResource( 8 )
window_title = "Are you a loser?"
dialog_text = "Only losers exit. Really exit?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Margin/Menu/RightHalf/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="confirmed" from="ConfirmExit" to="." method="_on_ConfirmExit_confirmed"]
